--- a/index.html
+++ b/index.html
@@ -23,5 +23,7 @@
     <h2>5-Day Forecast</h2>
     <div id="forecast"></div>
     
+    <script src="javaScript.js" defer></script>
+    
 </body>
 </html>
