add getWeather function in button( index)

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <label>Enter city name:</label><br>
     <input type="text" id="cityInput" placeholder="Barrie">
-    <button onclick="">Get Weather</button>
+    <button onclick="getWeather()">Get Weather</button>
 
     <div id="result"></div>
 
