--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>WeatherAPP</title>
     <link rel="stylesheet" href="Stylee.css">
 </head>
 <body>
 
-    <h1>Weather API Demo</h1>
+    <h1>Weather API</h1>
 
     <!-- Weather API Documentation:
          https://openweathermap.org/api
